--- a/src/modules/Pages/templates/pages_admin_new.htm
+++ b/src/modules/Pages/templates/pages_admin_new.htm
@@ -79,7 +79,7 @@
                 </div>
             </fieldset>
 
-            {modcallhooks hookobject='item' hookaction='new' module='Pages'}
+            {*modcallhooks hookobject='item' hookaction='new' module='Pages'*}
 
             <div class="z-formbuttons">
                 {button src='button_ok.gif' set='icons/small' __alt='Create' __title='Create'}
