--- a/src/modules/Pages/templates/pages_block_pageblock_display.htm
+++ b/src/modules/Pages/templates/pages_block_pageblock_display.htm
@@ -1,5 +1,3 @@
-{*  $Id: pages_block_pageblock_display.htm 414 2010-06-14 04:49:35Z drak $  *}
-
 <div>
-    {$content|modcallhooks:'Pages'}
+    {$content}{*$content|modcallhooks:'Pages'*}
 </div>
