--- a/src/modules/Pages/templates/pages_block_pageslist.htm
+++ b/src/modules/Pages/templates/pages_block_pageslist.htm
@@ -1,12 +1,10 @@
-{*  $Id: pages_block_pageslist.htm 432 2010-07-06 12:25:50Z drak $  *}
-
 <ul class="pages-list">
     {section name='items' loop=$items}
     <li>
         {if $items[items].url neq ''}
-        <a href="{$items[items].url|safetext}">{$items[items].title|modcallhooks:'Pages'|safehtml}</a>
+        <a href="{$items[items].url|safetext}">{$items[items].title|safehtml}{*WAS$items[items].title|modcallhooks:'Pages'|safehtml*}</a>
         {else}
-        {$items[items].title|safehtml|modcallhooks:'Pages'}
+        {$items[items].title|safehtml}{*WAS$items[items].title|safehtml|modcallhooks:'Pages'*}
         {/if}
     </li>
     {/section}
