--- a/src/modules/Pages/templates/pages_user_display.htm
+++ b/src/modules/Pages/templates/pages_user_display.htm
@@ -1,10 +1,9 @@
-{*  $Id: pages_user_display.htm 432 2010-07-06 12:25:50Z drak $  *}
 {pagesetvar name='title' value=$title}
 {insert name='getstatusmsg'}
 
 <div class="pages_page_container">
     {if $displaytitle}
-    <h2>{$title|modcallhooks|safehtml}</h2>
+    <h2>{$title|safehtml}</h2>
     {/if}
 
     {if $displaywrapper or $displaycreated or $displayupdated}
@@ -36,7 +35,7 @@
     {/if}
 
     <div class="pages_page_body">
-        {$content|safehtml|modcallhooks:'Pages'}
+        {$content|safehtml}{*WAS$content|safehtml|modcallhooks:'Pages'*}
     </div>
 
     {if $displayprint or $displaytextinfo or $displayeditlink}
@@ -61,5 +60,5 @@
     {pager rowcount=$pager.numitems limit=$pager.itemsperpage posvar='page'}
 
     {modurl modname='Pages' func='display' pageid=$pageid assign='returnurl'}
-    {modcallhooks hookobject='item' hookaction='display' hookid=$pageid module='Pages' returnurl=$returnurl}
+    {*modcallhooks hookobject='item' hookaction='display' hookid=$pageid module='Pages' returnurl=$returnurl*}
 </div>
