--- a/src/modules/Pages/templates/pages_user_rowoverview.htm
+++ b/src/modules/Pages/templates/pages_user_rowoverview.htm
@@ -1,3 +1,1 @@
-{*  $Id: pages_user_rowoverview.htm 432 2010-07-06 12:25:50Z drak $  *}
-
-{$title|safehtml|modcallhooks:'Pages'}
+{$title|safehtml}
