--- a/src/modules/Pages/templates/pages_admin_menu.htm
+++ b/src/modules/Pages/templates/pages_admin_menu.htm
@@ -1,10 +1,6 @@
-{*  $Id: pages_admin_menu.htm 414 2010-06-14 04:49:35Z drak $  *}
-
 {admincategorymenu}
 
 <div class="z-adminbox">
     <h1>{gt text='Pages'}</h1>
-    <div class="z-menu">
-        {moduleadminlinks modname='Pages'}
-    </div>
+    {modulelinks modname='Pages' type='admin'}
 </div>
