--- a/Resources/views/Admin/delete.html.twig
+++ b/Resources/views/Admin/delete.html.twig
@@ -2,22 +2,30 @@
 {{ render(controller('ZikulaAdminModule:Admin:adminheader')) }}
 <div class="container-fluid">
     <div class="row">
-        <h1>{{ p.__('Delete Page?') }}</h1>
-        <ul>
-            <li>ID: {{ page.pageid }}</li>
-            <li>Title: {{ page.title }}</li>
-            <li>Created: {{ page.cr_date|date("m/d/Y") }}</li>
-        </ul>
+        <h3>
+            <span class="fa fa-trash-o"></span>
+            {{ p.__('Delete this page?') }}
+        </h3>
         {{ getstatusmsg() }}
         {{ form_start(form) }}
-        {{ form_widget(form) }}
-
-        {#{{ form_start(form) }}#}
-        {#{{ form_errors(form) }}#}
-
-        {#{{ form_row(form.task) }}#}
-        {#{{ form_row(form.dueDate) }}#}
-        {#{{ form_widget(form.save, {'attr': {'class': 'btn btn-success'}}) }}#}
+        {{ form_errors(form) }}
+        <fieldset>
+            <legend>{{ __('Page Details') }}</legend>
+            <div class="col-lg-offset-3 col-lg-9">
+                <ul>
+                    <li>{{ __('ID') }}: {{ page.pageid }}</li>
+                    <li>{{ __('Title') }}: {{ page.title }}</li>
+                    <li>{{ __('Created on') }}: {{ page.cr_date|date("m/d/Y") }}</li>
+                    <li>{{ __('Created by') }}: {{ page.creator.uname }}</li>
+                </ul>
+            </div>
+        </fieldset>
+        <div class="form-group">
+            <div class="col-lg-offset-3 col-lg-9">
+                {{ form_widget(form.Delete, {'attr': {'class': 'btn btn-success'}}) }}
+                {{ form_widget(form.cancel, {'attr': {'class': 'btn btn-default'}}) }}
+            </div>
+        </div>
         {{ form_end(form) }}
     </div>
 
