--- a/Resources/views/Admin/modify.html.twig
+++ b/Resources/views/Admin/modify.html.twig
@@ -1,21 +1,57 @@
+{{ pageAddVar('javascript', zasset('@ZikulaPagesModule:js/Zikula.Pages.Admin.Modify.js')) }}
 {% form_theme form 'ZikulaFormExtensionBundle:Form:bootstrap_3_zikula_admin_layout.html.twig' %}
 {{ render(controller('ZikulaAdminModule:Admin:adminheader')) }}
 <div class="container-fluid">
     <div class="row">
-        <h1>{{ p.__('Modify Page') }}</h1>
+        <h3>
+            <span class="fa fa-edit"></span>
+            {{ p.__('Modify Page') }}
+        </h3>
         {{ getstatusmsg() }}
         {{ form_start(form) }}
-
-        {{ form_row(form.categories, {'full_name': form.categories.vars.full_name|replace({ (form.categories.vars.name): form.categories.vars.name ~ '][' ~ form.categories.vars.registry_id }) }) }}
-
-        {{ form_widget(form) }}
-
-        {#{{ form_start(form) }}#}
-        {#{{ form_errors(form) }}#}
-
-        {#{{ form_row(form.task) }}#}
-        {#{{ form_row(form.dueDate) }}#}
-        {#{{ form_widget(form.save, {'attr': {'class': 'btn btn-success'}}) }}#}
+        {{ form_errors(form) }}
+        <fieldset>
+            <legend>{{ __('Content') }}</legend>
+            {{ form_row(form.obj_status) }}
+            {{ form_row(form.title) }}
+            {{ form_row(form.urltitle) }}
+            {{ form_row(form.categories, {'full_name': form.categories.vars.full_name|replace({ (form.categories.vars.name): form.categories.vars.name ~ '][' ~ form.categories.vars.registry_id }) }) }}
+            {{ form_row(form.language) }}
+            {{ form_row(form.content) }}
+        </fieldset>
+        <fieldset>
+            <legend>{{ __('Meta tags') }}</legend>
+            {{ form_row(form.metadescription) }}
+            {{ form_row(form.metakeywords) }}
+        </fieldset>
+        <fieldset>
+            <legend><a id="pages_settings_collapse" href="#"><i class="fa fa-plus hide"></i> {{ __('Specific page settings') }}</a></legend>
+            <div id="pages_settings_details">
+                {{ form_row(form.displaywrapper) }}
+                {{ form_row(form.displaytitle) }}
+                {{ form_row(form.displaycreated) }}
+                {{ form_row(form.displayupdated) }}
+                {{ form_row(form.displaytextinfo) }}
+                {{ form_row(form.displayprint) }}
+            </div>
+        </fieldset>
+        <fieldset>
+            <legend><a id="pages_meta_collapse" href="#"><i class="fa fa-plus hide"></i> {{ __('Meta data') }}</a></legend>
+            <div id="pages_meta_details" class="col-lg-offset-3 col-lg-9">
+                <ul>
+                    <li>{{ __f('Created by %s', form.vars.value.creator.uname|default('')) }}</li>
+                    <li>{{ __f('Created on %s', form.vars.value.cr_date|date("m/d/Y")) }}</li>
+                    <li>{{ __f('Last update by %s', form.vars.value.updater.uname|default('')) }}</li>
+                    <li>{{ __f('Updated on %s', form.vars.value.lu_date|date("m/d/Y")) }}</li>
+                </ul>
+            </div>
+        </fieldset>
+        {{ notifyDisplayHooks('pages.ui_hooks.pages.form_edit', form.vars.value.pageid|default(null)) }}
+        <div class="form-group">
+            <div class="col-lg-offset-3 col-lg-9">
+                {{ form_widget(form.save, {'attr': {'class': 'btn btn-success'}}) }}
+            </div>
+        </div>
         {{ form_end(form) }}
     </div>
 
