--- a/Resources/views/Admin/config.html.twig
+++ b/Resources/views/Admin/config.html.twig
@@ -7,7 +7,7 @@
     <div class="row">
         <h3>
             <span class="fa fa-wrench"></span>
-            {{ p.__('Modify Pages Config') }}
+            {{ __('Modify Pages Config') }}
         </h3>
         {{ getstatusmsg() }}
         {{ form_start(form) }}
