--- a/Resources/views/Admin/delete.html.twig
+++ b/Resources/views/Admin/delete.html.twig
@@ -4,7 +4,7 @@
     <div class="row">
         <h3>
             <span class="fa fa-trash-o"></span>
-            {{ p.__('Delete this page?') }}
+            {{ __('Delete this page?') }}
         </h3>
         {{ getstatusmsg() }}
         {{ form_start(form) }}
