upgdate twig tag name

--- a/Resources/views/Admin/config.html.twig
+++ b/Resources/views/Admin/config.html.twig
@@ -9,7 +9,7 @@
             <span class="fa fa-wrench"></span>
             {{ __('Modify Pages Config') }}
         </h3>
-        {{ getstatusmsg() }}
+        {{ showflashes() }}
         {{ form_start(form) }}
         {{ form_errors(form) }}
         <fieldset>
