--- a/Resources/views/Admin/delete.html.twig
+++ b/Resources/views/Admin/delete.html.twig
@@ -6,7 +6,7 @@
             <span class="fa fa-trash-o"></span>
             {{ __('Delete this page?') }}
         </h3>
-        {{ getstatusmsg() }}
+        {{ showflashes() }}
         {{ form_start(form) }}
         {{ form_errors(form) }}
         <fieldset>
