--- a/Resources/views/Admin/modify.html.twig
+++ b/Resources/views/Admin/modify.html.twig
@@ -7,7 +7,7 @@
             <span class="fa fa-edit"></span>
             {{ p.__('Modify Page') }}
         </h3>
-        {{ getstatusmsg() }}
+        {{ showflashes() }}
         {{ form_start(form) }}
         {{ form_errors(form) }}
         <fieldset>
