--- a/Resources/views/User/view.html.twig
+++ b/Resources/views/User/view.html.twig
@@ -3,7 +3,7 @@
 {{ pageSetVar('title', templatetitle) }}
 {{ showflashes() }}
 
-<h2>{{ __f('Category: %s', category.display_name[lang]) }}</h2>
+<h2>{{ __f('Category: %s', { '%s': category.display_name[lang] } ) }}</h2>
 <p>{{ __('Pages published under this category:') }}</p>
 <ul>
     {% for page in pages if checkPermission('ZikulaPagesModule::Page', page.title ~ '::' ~ page.pageid, 'ACCESS_READ') %}
