--- a/Resources/views/Admin/modify.html.twig
+++ b/Resources/views/Admin/modify.html.twig
@@ -5,7 +5,7 @@
     <div class="row">
         <h3>
             <span class="fa fa-edit"></span>
-            {{ p.__('Modify Page') }}
+            {{ __('Modify Page') }}
         </h3>
         {{ showflashes() }}
         {{ form_start(form) }}
@@ -39,10 +39,10 @@
             <legend><a id="pages_meta_collapse" href="#"><i class="fa fa-plus hide"></i> {{ __('Meta data') }}</a></legend>
             <div id="pages_meta_details" class="col-lg-offset-3 col-lg-9">
                 <ul>
-                    <li>{{ __f('Created by %s', form.vars.value.creator.uname|default('')) }}</li>
-                    <li>{{ __f('Created on %s', form.vars.value.cr_date|date("m/d/Y")) }}</li>
-                    <li>{{ __f('Last update by %s', form.vars.value.updater.uname|default('')) }}</li>
-                    <li>{{ __f('Updated on %s', form.vars.value.lu_date|date("m/d/Y")) }}</li>
+                    <li>{{ __f('Created by %s', { '%s': form.vars.value.creator.uname|default('') } ) }}</li>
+                    <li>{{ __f('Created on %s', { '%s': form.vars.value.cr_date|date("m/d/Y") } ) }}</li>
+                    <li>{{ __f('Last update by %s', { '%s': form.vars.value.updater.uname|default('') } ) }}</li>
+                    <li>{{ __f('Updated on %s', { '%s': form.vars.value.lu_date|date("m/d/Y") } ) }}</li>
                 </ul>
             </div>
         </fieldset>
