--- a/Resources/views/User/display.html.twig
+++ b/Resources/views/User/display.html.twig
@@ -11,10 +11,10 @@
 <div class="pages_page_header">
     <ul>
         {% if page.displaycreated %}
-        <li>{{ __f('Created by %1$s on %2$s', [page.creator.uname, page.cr_date|date("m/d/Y")] ) }}</li>
+        <li>{{ __f('Created by %name% on %date%', { '%name%': page.creator.uname, '%date%': page.cr_date|date("m/d/Y") } ) }}</li>
         {% endif %}
         {% if page.displayupdated %}
-        <li>{{ __f('Last update by %1$s on %2$s', [page.updater.uname, page.lu_date|date("m/d/Y")] ) }}</li>
+        <li>{{ __f('Last update by %name% on %date%', { '%name%': page.updater.uname, '%date%': page.lu_date|date("m/d/Y") } ) }}</li>
         {% endif %}
 
         {% if modvars.ZikulaPagesModule.enablecategorization and page.categories is not null %}
@@ -47,9 +47,9 @@
     <span class="text_separator">|</span>
     {% endif %}
     {% if page.displaytextinfo %}
-    {{ __f('%s total characters in this text', page.content|length) }}
+    {{ __f('%s total characters in this text', { '%s': page.content|length } ) }}
     <span class="text_separator">|</span>
-    {{ __f('%s reads', page.counter) }}
+    {{ __f('%s reads', { '%s': page.counter } ) }}
     {% endif %}
     {% if page.displayprint %}
             <span class="pages_page_printerlink">
