--- a/Resources/views/User/view.html.twig
+++ b/Resources/views/User/view.html.twig
@@ -6,7 +6,7 @@
 <h2>{{ __f('Category: %s', { '%s': category.display_name[lang] } ) }}</h2>
 <p>{{ __('Pages published under this category:') }}</p>
 <ul>
-    {% for page in pages if checkPermission('ZikulaPagesModule::Page', page.title ~ '::' ~ page.pageid, 'ACCESS_READ') %}
+    {% for page in pages if hasPermission('ZikulaPagesModule::Page', page.title ~ '::' ~ page.pageid, 'ACCESS_READ') %}
         <li><a href="{{ path('zikulapagesmodule_user_display', {urltitle: page.urltitle}) }}">{{ page.title }}</a></li>
     {% endfor %}
 </ul>
