refactor to use new `pageAddAsset()` function

--- a/Resources/views/Admin/modify.html.twig
+++ b/Resources/views/Admin/modify.html.twig
@@ -1,4 +1,4 @@
-{{ pageAddVar('javascript', zasset('@ZikulaPagesModule:js/Zikula.Pages.Admin.Modify.js')) }}
+{{ pageAddAsset('javascript', zasset('@ZikulaPagesModule:js/Zikula.Pages.Admin.Modify.js')) }}
 {% form_theme form 'ZikulaFormExtensionBundle:Form:bootstrap_3_zikula_admin_layout.html.twig' %}
 {{ render(controller('ZikulaAdminModule:Admin:adminheader')) }}
 <div class="container-fluid">
