--- a/Resources/views/Block/pageBlockModify.html.twig
+++ b/Resources/views/Block/pageBlockModify.html.twig
@@ -1,6 +1,6 @@
-{{ pageAddVar('javascript', zasset('@ZikulaPagesModule:js/select2/select2.min.js')) }}
-{{ pageAddVar('stylesheet', zasset('@ZikulaPagesModule:js/select2/select2.css')) }}
-{{ pageAddVar('stylesheet', zasset('@ZikulaPagesModule:js/select2/select2-bootstrap.css')) }}
+{{ pageAddAsset('javascript', zasset('@ZikulaPagesModule:js/select2/select2.min.js')) }}
+{{ pageAddAsset('stylesheet', zasset('@ZikulaPagesModule:js/select2/select2.css')) }}
+{{ pageAddAsset('stylesheet', zasset('@ZikulaPagesModule:js/select2/select2-bootstrap.css')) }}
 
 <div class="form-group">
     <label for="htmlpages_pid" class="col-lg-3 control-label">
