--- a/Resources/views/User/display.html.twig
+++ b/Resources/views/User/display.html.twig
@@ -1,4 +1,4 @@
-{{ pageAddVar('stylesheet', zasset('@ZikulaPagesModule:css/style.css')) }}
+{{ pageAddAsset('stylesheet', zasset('@ZikulaPagesModule:css/style.css')) }}
 
 {{ pageSetVar('title', page.title) }}
 {{ showflashes() }}
