--- a/Resources/views/User/view.html.twig
+++ b/Resources/views/User/view.html.twig
@@ -1,4 +1,4 @@
-{{ pageAddVar('stylesheet', zasset('@ZikulaPagesModule:css/style.css')) }}
+{{ pageAddAsset('stylesheet', zasset('@ZikulaPagesModule:css/style.css')) }}
 {% set templatetitle = __('Pages list') %}
 {{ pageSetVar('title', templatetitle) }}
 {{ showflashes() }}
