--- a/Resources/views/Admin/view.html.twig
+++ b/Resources/views/Admin/view.html.twig
@@ -30,14 +30,8 @@
             <td>{{ page.creator.uname|default('Unknown Author') }}</td>
             {% if modvars.ZikulaPagesModule.enablecategorization %}
                 <td>
-                {% for category in page.categories %}
-                    {% if category is iterable  %}
-                        {% for item in category %}
-                            {{ item.display_name[lang] }}{% if not loop.last %}, {% endif %}
-                        {% endfor %}
-                    {% else %}
-                        {{ category.display_name[lang] }}{% if not loop.last %}, {% endif %}
-                    {% endif %}
+                {% for assignment in page.categories %}
+                    {{ assignment.category.display_name[lang] }}{% if not loop.last %}, {% endif %}
                 {% else %}
                     {{  __('No categories') }}
                 {% endfor %}
