correct admin filter display

--- a/Resources/views/Admin/filter_form.html.twig
+++ b/Resources/views/Admin/filter_form.html.twig
@@ -4,17 +4,18 @@
 ] %}
 {% if modvars.ZConfig.multilingual or modvars.ZikulaPagesModule.enablecategorization %}
     {{ form_start(filterForm) }}
-        <fieldset{% if filter_active %} class='filteractive'{% endif %}>
-            {% if filter_active %}{% set filteractive = __('active') %}{% else %}{% set filteractive = __('inactive') %}{% endif %}
-            <legend>{{ _fn("Filter %active%, %count% page listed", "Filter %active%, %count% pages listed", pager.numitems, { '%active%': filteractive, '%count%': pager.numitems } ) }}</legend>
-            {% if modvars.ZikulaPagesModule.enablecategorization %}
-                {{ form_row(filterForm.categories) }}
-            {% endif %}
-            {% if modvars.ZConfig.multilingual %}
-                {{ form_row(filterForm.language) }}
-            {% endif %}
-            {{ form_row(filterForm.FilterButton) }}
-            <a href="{{ path('zikulapagesmodule_admin_index') }}" title="{{ __('Clear') }}" class="btn btn-default btn-sm"><i class="fa fa-times fa-lg"></i> {{ __("Clear") }}</a>
-        </fieldset>
+    <fieldset{% if filter_active %} class='filteractive'{% endif %}>
+        {% if filter_active %}{% set filteractive = __('active') %}{% else %}{% set filteractive = __('inactive') %}{% endif %}
+        <legend>{{ _fn("Filter %active%, %count% page listed", "Filter %active%, %count% pages listed", pager.numitems, { '%active%': filteractive, '%count%': pager.numitems } ) }}</legend>
+        {% if modvars.ZikulaPagesModule.enablecategorization %}
+            <strong>{{ __('Categories') }}</strong>
+            {% for categorySelect in filterForm.categories %}{{ form_widget(categorySelect) }}&nbsp;&nbsp;{% endfor %}
+        {% endif %}
+        <span{% if not modvars.ZConfig.multilingual %} class="hidden"{% endif %}>
+            <strong>{{ __('Language') }}</strong> {{ form_widget(filterForm.language) }}&nbsp;&nbsp;
+        </span>
+        {{ form_widget(filterForm.filterButton) }}
+        <a href="{{ path('zikulapagesmodule_admin_index') }}" title="{{ __('Clear') }}" class="btn btn-default btn-sm"><i class="fa fa-times fa-lg"></i> {{ __("Clear") }}</a>
+    </fieldset>
     {{ form_end(filterForm) }}
 {% endif %}
