very minor layout update

--- a/Resources/views/Admin/filter_form.html.twig
+++ b/Resources/views/Admin/filter_form.html.twig
@@ -6,7 +6,7 @@
     {{ form_start(filterForm) }}
     <fieldset{% if filter_active %} class='filteractive'{% endif %}>
         {% if filter_active %}{% set filteractive = __('active') %}{% else %}{% set filteractive = __('inactive') %}{% endif %}
-        <legend>{{ _fn("Filter %active%, %count% page listed", "Filter %active%, %count% pages listed", pager.numitems, { '%active%': filteractive, '%count%': pager.numitems } ) }}</legend>
+        <legend style="margin-bottom:0">{{ _fn("Filter %active%, %count% page listed", "Filter %active%, %count% pages listed", pager.numitems, { '%active%': filteractive, '%count%': pager.numitems } ) }}</legend>
         <span{% if not modvars.ZikulaPagesModule.enablecategorization %} class="hidden"{% endif %}>
             <strong>{{ __('Categories') }}</strong>
             {% for categorySelect in filterForm.categories %}{{ form_widget(categorySelect) }}&nbsp;&nbsp;{% endfor %}
