use new pager in User view also.

--- a/Resources/views/User/display.html.twig
+++ b/Resources/views/User/display.html.twig
@@ -53,5 +53,5 @@
 </div>
 {% endif %}
 
-{{ pager({rowcount:pager.numitems, limit:pager.itemsperpage, posvar:'pagenum', route:'zikulapagesmodule_user_display'}) }}
+{{ pages_pager({rowcount:pager.numitems, limit:pager.itemsperpage, posvar:'pagenum', route:'zikulapagesmodule_user_display'}) }}
 {{ notifyDisplayHooks('pages.ui_hooks.pages.display_view', page.pageid) }}
