--- a/Resources/views/User/listpages.html.twig
+++ b/Resources/views/User/listpages.html.twig
@@ -12,4 +12,4 @@
     {% endfor %}
 </ul>
 
-{{ pager({rowcount:pager.numitems, limit:pager.itemsperpage, posvar:'startnum', route:'zikulapagesmodule_user_listpages'}) }}
+{{ pages_pager({rowcount:pager.numitems, limit:pager.itemsperpage, posvar:'startnum', route:'zikulapagesmodule_user_listpages'}) }}
