remove dependence on local FormType and Pager and use core version for Core-1.4.2. Refactor categories -> categoryAssignments for better readability. Update all forms to Sy2.8 standards. change version to 3.1.0 so upgrade routine can be corrected in 3.0.1

--- a/Resources/views/Admin/filter_form.html.twig
+++ b/Resources/views/Admin/filter_form.html.twig
@@ -9,7 +9,7 @@
         <legend style="margin-bottom:0">{{ _fn("Filter %active%, %count% page listed", "Filter %active%, %count% pages listed", pager.numitems, { '%active%': filteractive, '%count%': pager.numitems } ) }}</legend>
         <span{% if not modvars.ZikulaPagesModule.enablecategorization %} class="hidden"{% endif %}>
             <strong>{{ __('Categories') }}</strong>
-            {% for categorySelect in filterForm.categories %}{{ form_widget(categorySelect) }}&nbsp;&nbsp;{% endfor %}
+            {% for categorySelect in filterForm.categoryAssignments %}{{ form_widget(categorySelect) }}&nbsp;&nbsp;{% endfor %}
         </span>
         <span{% if not modvars.ZConfig.multilingual %} class="hidden"{% endif %}>
             <strong>{{ __('Language') }}</strong> {{ form_widget(filterForm.language) }}&nbsp;&nbsp;
