--- a/Resources/views/User/view.html.twig
+++ b/Resources/views/User/view.html.twig
@@ -11,4 +11,4 @@
     {% endfor %}
 </ul>
 
-{{ pages_pager({show:'page', rowcount:pager.numitems, limit:pager.itemsperpage, posvar:'startnum', route:'zikulapagesmodule_user_view'}) }}
+{{ pager({show:'page', rowcount:pager.numitems, limit:pager.itemsperpage, posvar:'startnum', route:'zikulapagesmodule_user_view'}) }}
