--- a/Resources/views/Admin/modify.html.twig
+++ b/Resources/views/Admin/modify.html.twig
@@ -15,7 +15,7 @@
             {{ form_row(form.obj_status) }}
             {{ form_row(form.title) }}
             {{ form_row(form.urltitle) }}
-            {{ form_row(form.categories) }}
+            {{ form_row(form.categoryAssignments) }}
             {{ form_row(form.language) }}
             {{ form_row(form.content) }}
         </fieldset>
