added title to admin view page

--- a/Resources/views/Admin/view.html.twig
+++ b/Resources/views/Admin/view.html.twig
@@ -3,6 +3,7 @@
     <span class="fa fa-list"></span>
     {{ __('View pages list') }}
 </h3>
+{{ pageSetVar('title', __('View pages list')) }}
 
 {% include 'ZikulaPagesModule:Admin:filter_form.html.twig' %}
 
