--- a/Resources/views/Admin/modify.html.twig
+++ b/Resources/views/Admin/modify.html.twig
@@ -1,4 +1,5 @@
 {{ pageAddAsset('javascript', zasset('@ZikulaPagesModule:js/Zikula.Pages.Admin.Modify.js')) }}
+{{ pageSetVar('title', __('Modify page')) }}
 {% form_theme form 'ZikulaFormExtensionBundle:Form:bootstrap_3_zikula_admin_layout.html.twig' %}
 {{ render(controller('ZikulaAdminModule:Admin:adminheader')) }}
 <div class="container-fluid">
