--- a/Resources/views/Admin/delete.html.twig
+++ b/Resources/views/Admin/delete.html.twig
@@ -1,4 +1,5 @@
 {% form_theme form 'ZikulaFormExtensionBundle:Form:bootstrap_3_zikula_admin_layout.html.twig' %}
+{{ pageSetVar('title', __('Delete page')) }}
 {{ render(controller('ZikulaAdminModule:Admin:adminheader')) }}
 <div class="container-fluid">
     <div class="row">
