--- a/Resources/views/User/main.html.twig
+++ b/Resources/views/User/main.html.twig
@@ -5,11 +5,11 @@
 
 <h2>{{ templatetitle }}</h2>
 <p>{{ __('Available categories:') }}</p>
-{% for property in propertiesdata %}
+{% for registry in registries %}
 <ul>
-    {% for category in property.subcategories %}
-    <li><a href="{{ path('zikulapagesmodule_user_view', {prop: property.name, cat:category.id}) }}" title="{{ category.display_desc[lang] }}">{{ category.display_name[lang] }}</a>
-         ({{ _fn('%s page', '%s pages', category.count, { '%s': category.count } ) }})
+    {% for category in registry.category.children %}
+    <li><a href="{{ path('zikulapagesmodule_user_view', {cat:category.id}) }}" title="{{ category.display_desc[app.request.locale] }}">{{ category.display_name[app.request.locale] }}</a>
+         {# TODO ({{ _fn('%s page', '%s pages', category.count, { '%s': category.count } ) }})#}
     </li>
     {% endfor %}
 </ul>
