--- a/Resources/views/Admin/modify.html.twig
+++ b/Resources/views/Admin/modify.html.twig
@@ -1,7 +1,7 @@
 {{ pageAddAsset('javascript', zasset('@ZikulaPagesModule:js/Zikula.Pages.Admin.Modify.js')) }}
 {{ pageSetVar('title', __('Modify page')) }}
 {% form_theme form 'ZikulaFormExtensionBundle:Form:bootstrap_3_zikula_admin_layout.html.twig' %}
-{{ render(controller('ZikulaAdminModule:Admin:adminheader')) }}
+{{ adminHeader() }}
 <div class="container-fluid">
     <div class="row">
         <h3>
@@ -57,4 +57,4 @@
     </div>
 
 </div>
-{{ render(controller('ZikulaAdminModule:Admin:adminfooter')) }}
+{{ adminFooter() }}
