--- a/Resources/views/Admin/view.html.twig
+++ b/Resources/views/Admin/view.html.twig
@@ -1,4 +1,4 @@
-{{ render(controller('ZikulaAdminModule:Admin:adminheader')) }}
+{{ adminHeader() }}
 <h3>
     <span class="fa fa-list"></span>
     {{ __('View pages list') }}
@@ -65,4 +65,4 @@
     </tbody>
 </table>
 {{ pager({rowcount:pager.numitems, limit:pager.itemsperpage, posvar:'startnum', route:'zikulapagesmodule_admin_index'}) }}
-{{ render(controller('ZikulaAdminModule:Admin:adminfooter')) }}
+{{ adminFooter() }}
