--- a/Resources/views/Config/config.html.twig
+++ b/Resources/views/Config/config.html.twig
@@ -3,7 +3,7 @@
     'ZikulaFormExtensionBundle:Form:form_div_layout.html.twig'
 ] %}
 {{ pageSetVar('title', __('Pages settings')) }}
-{{ render(controller('ZikulaAdminModule:Admin:adminheader')) }}
+{{ adminHeader() }}
 <div class="container-fluid">
     <div class="row">
         <h3>
@@ -42,4 +42,4 @@
     </div>
 
 </div>
-{{ render(controller('ZikulaAdminModule:Admin:adminfooter')) }}
+{{ adminFooter() }}
