--- a/Resources/views/Block/pageBlockDisplay.html.twig
+++ b/Resources/views/Block/pageBlockDisplay.html.twig
@@ -1,3 +1,3 @@
 <div>
-    {{ content|safeHtml|notifyFilters('pages.filter_hooks.pages.filter')|raw }}
+    {{ content|notifyFilters('pages.filter_hooks.pages.filter')|safeHtml }}
 </div>
